--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dev": "bun run --watch src/server.ts",
     "lint": "biome check --write src",
     "format": "biome format --write src",
+    "start": "bun run server",
+    "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile server src/server.ts",
     "check": "biome check src"
   },
   "dependencies": {
