feat: adicionar envio de email com resend ao criar usuario

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
+WEB_APP_URL="http://localhost:3000"
 NODE_ENV="development"
 PORT=8888
-VITE
+RESEND_API_KEY=re_8Tf8eEhe_91aPti1jizMy9QTf8ieq7mhh
+RESEND_FROM_EMAIL=interno@motolinkexpress.com
