--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,7 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -6,10 +9,10 @@
             "internalConsoleOptions": "neverOpen",
             "request": "launch",
             "name": "Debug File",
-            "program": "${workspaceFolder}/src/server.ts",
+            "program": "${file}",
             "cwd": "${workspaceFolder}",
             "stopOnEntry": false,
-            "watchMode": "hot"
+            "watchMode": false
         },
         {
             "type": "bun",
