--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "biome format --write src",
     "start": "bun run server",
     "build": "bun prisma generate && bun build --compile --minify-whitespace --minify-syntax --target bun --outfile server src/server.ts",
-    "check": "biome check src"
+    "check": "biome check src",
+    "db:dev": "docker-compose up db -d"
   },
   "dependencies": {
     "@elysiajs/bearer": "^1.4.2",
