--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:dev": "docker-compose up db -d"
   },
   "dependencies": {
+    "@bogeychan/elysia-logger": "^0.1.10",
     "@elysiajs/bearer": "^1.4.2",
     "@elysiajs/cors": "^1.4.1",
     "@elysiajs/jwt": "^1.4.0",
