--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ NODE_ENV="development"
 PORT=8888
 RESEND_API_KEY=resend_example_api_key_1234567890
 RESEND_FROM_EMAIL=naoresponda@motolinkexpress.com
+WHATSAPP_TOKEN=token_whatsapp_bot
