--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres:17
-    container_name: motolink-db
+    container_name: motolink-db-server
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
